[gd_scene load_steps=5 format=3 uid="uid://dyypxum3gq158"]

[ext_resource type="FontFile" path="res://src/tres/DejaVuSans.tres" id="1"]
[ext_resource type="Script" path="res://src/scripts/Main.gd" id="2"]
[ext_resource type="PackedScene" path="res://src/scenes/IITv2.tscn" id="3"]
[ext_resource type="PackedScene" path="res://src/scenes/BuyMenu.tscn" id="4"]

[node name="Node3D" type="Node3D"]
script = ExtResource("2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.5, -0.866025, 0, 0.866025, 0.5, 1, 2.18557e-08, -3.78552e-08, 0, 20, 0)

[node name="IITv2" parent="." instance=ExtResource("3")]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Play" type="Button" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
text = "PLAY"

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 25.0

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.60598, 16, -215.463)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, -3.55272e-15, -8.74227e-08, -6.18172e-08, 0.707107, 0.707107, 6.18172e-08, 0.707107, -0.707107, 0, 50, -271)
fov = 53.5
far = 284.6

[node name="BuyMenu" parent="." instance=ExtResource("4")]
visible = false

[connection signal="pressed" from="CenterContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="timeout" from="RoundTimer" to="." method="_on_RoundTimer_timeout"]
